Food Item Alignment Fixed!

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,9 +1,9 @@
 .footer-block{
     font-family: 'Roboto', sans-serif;
     display: block;
-    position: relative;
-    
-    height: max-content;
+    position:relative;
+ 
+
     background-color: #33312eff;
     margin-top: 5rem;
     
