--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -1,16 +1,13 @@
 .card-block{
     z-index: 0;
     text-align: center;
-    position: relative;
    
 }
 
-accordion{
-    background-color: #121212;
-}
 #media-block{
      position: relative;
      text-align: left;
+     padding-left: 2.3rem;
      
 }
 
